# mlir-backend

./: .gitignore  CMakeLists.txt  Futhark.g4  README.md
mlir-backend/: .clang-format  CMakeLists.txt  mlir-backend.cpp  pch.h
mlir-backend/ir/: compiler.hpp  core.hpp  parser.hpp  primitive.hpp  soac.hpp  syntax.hpp
mlir-backend/tests/: accel.futhark  basic0.futhark  basic1.futhark  basic2.futhark  basic4.futhark  bool_cmpop.futir  cmptests.futir  conv2d_monomorph_10.futhark  convtests.futir  let0.futhark  let1.futhark  let3.futhark  let4.futhark  u8_cmpop.futir  untests.futir
